<resources>
    <string name="app_name">Voozer</string>
    <string name="navigation_drawer_open">Otwórz menu</string>
    <string name="navigation_drawer_close">Zamknij menu</string>
    <string name="action_settings">Ustawienia</string>

    <string name="popup_title">Czy chcesz zmienić profil?</string>
    <string name="popup_cancel_ride_title">Czy chcesz anulować przejazd?</string>

    <string name="confirm">Tak</string>
    <string name="cancel">Nie</string>

    <string name="search_bar_greeting">Witaj</string>
    <string name="search_bar_title">Dokąd dzisiaj?</string>
    <string name="header_bar_accept">Jedziemy!</string>
    <string name="drivers_list_title">Wybierz Kierowcę</string>


    <string name="menu_rides">Twoje podwózki</string>
    <string name="menu_preferences">Twoje preferencje</string>
    <string name="menu_help">Pomoc</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="menu_logout">Wyloguj</string>
    <string name="menu_other">Inne</string>
    <string name="menu_regulations">Regulamin</string>
    <string name="menu_driver">Kierowca</string>
    <string name="menu_passenger">Pasażer</string>
    <string name="default_notification_channel_id">default</string>
    <string name="default_notification_channel_name">default</string>
    <string name="default_notification_channel_description">default</string>

    <string name="register_account_type_title">Wybierz typ użytkownika</string>
    <string name="register_account_type_message">Możesz zarejestrować się jako pasażer lub kierowca.</string>
</resources>
