<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_rides"
                android:title="@string/menu_rides"/>
        <item
                android:id="@+id/nav_preferences"
                android:title="@string/menu_preferences"/>
        <item
                android:id="@+id/nav_help"
                android:title="@string/menu_help"/>
        <item
                android:id="@+id/nav_settings"
                android:title="@string/menu_settings"/>
    </group>

    <item android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_regulations"
                android:title="@string/menu_regulations"/>
        </menu>
    </item>

</menu>
